experimental/ir/testdata/extend/invalid_partial.proto.stderr.txt
error: cannot find `M.N` in this scope
  --> testdata/extend/invalid_partial.proto:24:16
   |
24 |         extend M.N {
   |                ^^^ not found in this scope
   = help: the full name of this scope is `test.M.M`

encountered 1 error
